--- a/clase7/backend/Dockerfile
+++ b/clase7/backend/Dockerfile
@@ -12,6 +12,7 @@ RUN npm install
 # If you are building your code for production
 # RUN npm install --only=production
 
+RUN npm install aws-sdk
 # Bundle app source
 COPY . .
 
